k8s/example/gitbook-example/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitbook-deployment
  namespace: gitbook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitbook
  template:
    metadata:
      labels:
        app: gitbook
    spec:
      containers:
      - name: gitbook
        image: gitbook:v1  # 替换成你的 Docker 镜像名称和版本
        ports:
        - containerPort: 4000
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: gitbook-data
          mountPath: /app  # 挂载到容器的数据目录
      volumes:
          - name: gitbook-data
            hostPath:
              path:  /data/gitbook/y37
              type:  Directory
