k8s/example/gitbook-example/serivce.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitbook-service
spec:
  selector:
    app: gitbook
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
