k8s/example/gitbook-example/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitbook-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: gitbook
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitbook-service
            port:
              number: 4000
